# roman-api

./: README.md  openapi.yaml
.github/workflows/: deploy.yaml
client/: main.html  main.js  manifest.json  package-lock.json  package.json  webpack.config.ts
client/src/: app.ts  app.tsx  main.tsx
server/: Cargo.toml
server/api/: Cargo.toml  Dockerfile
server/api/src/: controller.rs  main.rs
server/api/src/controller/: bookmark_controller.rs
server/infra/: Cargo.toml
server/infra/src/: lib.rs
