[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
futures = "0.3.30"
generated = { path = "../generated" }
infra = { path = "../infra"}
hyper = {version = "0.14", features = ["full"]}
swagger = "6.4.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.2.0"
